welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:16: error: Unmatched closing brace '}' ignored here
                     lignemotif2(Color.yellow,Color.green)}}
                                                          ^PatternPicture:16: error: ')' expected but '}' found.
                     lignemotif2(Color.yellow,Color.green)}}
                                                           ^